infra/k8s/ingress-controller.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
